//go:generate protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative ./pkg/dto/dto.proto

syntax = "proto3";
option go_package = "github.com/heyuhang0/DSCProject/pkg/dto";
package dto;

service KeyValueStore {
  rpc Put (PutRequest) returns (PutResponse) {}
  rpc Get (GetRequest) returns (GetResponse) {}
}

service KeyValueStoreInternal {
  rpc PutRep (PutRepRequest) returns (PutRepResponse) {}
  rpc GetRep (GetRepRequest) returns (GetRepResponse) {}
}

message PutRequest {
  bytes key = 1;
  bytes object = 2;
}

message PutResponse {
}

message GetRequest {
  bytes key = 1;
}

message GetResponse {
  bytes object = 1;
}



message PutRepRequest {
  bytes key = 1;
  bytes object = 2;
  VectorClock vectorclock = 3;
}

message PutRepResponse {
  VectorClock vectorclock = 1;
}

message GetRepRequest {
  bytes key = 1;
  VectorClock vectorclock = 2;
}

message GetRepResponse {
  bytes object = 1;
  VectorClock vectorclock = 2;
}

message VectorClock {
  map<int64,int64> vclock = 1;
  int64 machineID = 2;
}
